--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -124,14 +124,14 @@ html, body {
     background: rgba(255, 255, 255, 0.4);
 }
 
-.button_peach, .button_peach a {
+.button_peach {
     background: #FFF4F3;
     color: #EC7973;
     text-decoration: none;
     border: none;
 }
 
-.button_peach:hover, .button_peach:hover a {
+.button_peach:hover {
     background: #EAD1D0;
     color: #961914;
 }
@@ -1057,7 +1057,7 @@ html, body {
     margin-bottom: 4px;
 }
 
-.inputs__name-tel {
+.inputs__name-mail {
     display: flex;
     margin-bottom: 16px;
     justify-content: space-between;
@@ -1065,7 +1065,6 @@ html, body {
 
 .inputs__question {
     display: flex;
-    justify-content: stretch;
     margin-bottom: 22px;
 }
 
@@ -1082,12 +1081,54 @@ html, body {
     margin-bottom: 16px;
 }
 
+.inputs__name, .inputs__mail, .inputs__question textarea, .contact-form__privacy input {
+    background-color: rgba(255, 255, 255, 0.05);
+    border: solid 1px rgba(255, 255, 255, 0.5);
+    border-radius: 8px;
+    padding: 14px auto 14px 13px;
+}
+
+.inputs__name {
+    margin-right: 12px;
+    width:100%;
+    min-height: 48px;
+}
+
+.inputs__mail {
+    margin-left: 12px;
+    width:100%;
+    min-height: 48px;
+}
+
+.inputs__question textarea {
+    width:100%;
+    min-height: 122px;
+}
+
 /* - Типографика ------------------------------------------- */
 .contacts__phone {
     font-size: 16px;
     font-weight: 700;
     line-height: 140%;
     color: #FFFFFF;
+}
+
+.contact-form__privacy {
+    font-size: 12px;
+    line-height: 140%;
+}
+
+.inputs__name, .inputs__mail, .inputs__question textarea {
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: rgba(255, 255, 255, 1);
+    opacity: 60%;
+    align-content: center;
 }
 
 /* = FOOTER =================================================== */
